# enforce-browser-fonts

./: .gitignore  .ocamlformat  README-build.md  README-reviewers.md  README.html  README.md  README.org  README.txt  background-script-promise.js  background-script.js  build-script.sh  build-source-for-reviewers.sh  build-src-pkg.sh  compile-opts-options.edn  compile-opts.edn  dune-project  enforce-browser-fonts.opam  flake.nix  manifest.json  package-lock.json  package.json  readme.md  web-ext-cmd
cljs-compile-options/: core.edn  preferences.edn
cljs-compile-options/dev/: core.edn  preferences.edn
cljs-compile-options/prod/: core.edn  preferences.edn
cljs-version/: package-lock.json  package.json  shadow-cljs.edn
cljs-version/src/ebf/: bg.cljs
extras/: cljs-cmd  web-ext-cmd
js/: main.js  manifest.json
js-version/: bg-script-async-version.js
releases/: enforce-browser-fonts-0.1.xpi  enforce-browser-fonts-0.2-skipped.xpi  enforce-browser-fonts-0.3.xpi  enforce-browser-fonts-text.xpi  test.xpi
src/: bg.ml  common.ml  data.ml  dom_api.ml  dune  ffext.ml  js_api.ml  preferences.html  preferences.ml  rxjs.ml
src/ebf/: core.cljs  options.cljs  preferences.cljs
